--- a/desktop-icon.css
+++ b/desktop-icon.css
@@ -74,6 +74,12 @@
   grid-row: auto;
 }
 
+.desktop-icon-container[data-recyclable="true"] {
+  pointer-events: none;
+  opacity: 0;
+}
+
+
 .desktop-icon-placeholder {
   width: 100%;
   height: 100%;
@@ -81,5 +87,5 @@
 }
 
 .desktop-icon-container.placeholder {
-  visibility: collapse;
+  display: none;
 }
