--- a/navbar.css
+++ b/navbar.css
@@ -5,26 +5,24 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 56px;
-  background-color: #ebebeb;
+  height: calc(15 * var(--vps));
+  background-color: var(--bg-color);
   z-index: 50;
-  overflow: visible;
-  margin-bottom: 8px;
-  padding-top: 6px;
-  padding-bottom: 6px;
+  padding-top: calc(1 * var(--vps));
+  padding-bottom: calc(3 * var(--vps));
 }
 
 .left-section {
   display: flex;
   align-items: stretch;
-  margin-left: 15px;
+  margin-left: calc(2 * var(--vps));
 
 }
 
 .dropdown {
   position: relative;
   display: inline-block;
-  z-index: 9999;
+  z-index: 99999;
   margin-right: auto;
 }
 
@@ -32,7 +30,7 @@
   appearance: none;
   background: none;
   color: #000;
-  padding: 16px;
+  padding: calc(2 * var(--vps));
   font-family: 'VT323', monospace;
   font-size: var(--font-size-large);
   border: none;
@@ -40,11 +38,11 @@
 }
 
 .principal {
-  width: 200px;
+  width: calc(50 * var(--vps));
 }
 
 .overflow-btn {
-width: 50px;
+width: calc(12 * var(--vps));
 }
 
 
@@ -56,17 +54,17 @@ width: 50px;
   display: none;
   position: absolute;
   bottom: 100%;
-  background-color: #f1f1f1;
+  background-color: var(--bg-color);
   width: 100%;
-  z-index: 50;
+  z-index: 99999;
   cursor: none;
   font-family: 'VT323', monospace;
   font-size: var(--font-size-large);
 }
 
 .dropdown-content a {
-  color: black;
-  padding: 12px 16px;
+  color: var(--text-color);
+  padding: calc(3 * var(--vps)) calc(4 * var(--vps));
   text-decoration: none;
   display: block;
 }
@@ -78,8 +76,8 @@ width: 50px;
 .navbar-separator {
   display: inline-block;
   height: 90%;
-  width: 2px;
-  margin: 8px 8px 0 8px;
+  width: calc(1 * var(--vps));
+  margin: calc(2 * var(--vps)) calc(2 * var(--vps)) 0 calc(2 * var(--vps));
   align-self: stretch;
   box-shadow: 
     -2px 0 0 0 rgba(255,255,255,0.7),
