--- a/windowsmanager.css
+++ b/windowsmanager.css
@@ -11,8 +11,8 @@
   }
 
   .window-header button {
-    width: calc(5 * var(--virtual-pixel-size));
-    height: calc(5 * var(--virtual-pixel-size));
+    width: calc(5 * var(--vps));
+    height: calc(5 * var(--vps));
     background-color: transparent;
     border: none;
     cursor: pointer;
@@ -66,8 +66,8 @@
     position: fixed;
     width: fit-content;
     height: fit-content;
-    min-width: calc(40 * var(--virtual-pixel-size));
-    min-height: calc(40 * var(--virtual-pixel-size));
+    min-width: calc(40 * var(--vps));
+    min-height: calc(40 * var(--vps));
     z-index: 2;
     border: 2px solid var(--border-color);
     font-family: 'VT323', monospace;
@@ -136,14 +136,7 @@
     z-index: 10;
   }
   
-  .window {
-    position: absolute;
-    width: 200px;
-    height: 200px;
-    border: 1px solid black;
-    background: white;
-    z-index: 20;
-  }
+
   
   .window.active {
     z-index: 30;
