--- a/analog-clock.css
+++ b/analog-clock.css
@@ -1,7 +1,15 @@
 .analog-clock-container {
     position: relative;
-    grid-column: 1 / span 3;
-    grid-row: 1 / span 3;
+    /* grid-column: 1 / span 3;
+    grid-row: 1 / span 3; */
+    width: 100%;
+    height: 100%
+}
+
+#threeCanvas {
+    width: 100%;
+    height: 100%;
+    display: block; /* cela élimine l'espace blanc sous le canvas */
 }
 
 
