--- a/clock-dashboard.css
+++ b/clock-dashboard.css
@@ -4,22 +4,14 @@
 
 
 
- .window-content.clock-dashboard {
-    display: grid;
+.window-content.clock-dashboard {
+    /* display: grid;
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: repeat(10, 1fr);
     gap: 10px;
-    padding: 20px;
+    padding: 20px; */
 
     position: relative;
-    width: 75vh;
-    height: 75vh; /* la hauteur du contenu */
+    width: 25vh;
+    height: 25vh;
 }
-
-
-
-
-
-
-
-
