Clock v2 - No resize

--- a/navbar.css
+++ b/navbar.css
@@ -16,7 +16,12 @@
   display: flex;
   align-items: stretch;
   margin-left: calc(2 * var(--vps));
+}
 
+.right-section {
+  display: flex;
+  align-items: stretch;
+  margin-right: calc(2 * var(--vps));
 }
 
 .dropdown {
@@ -38,7 +43,7 @@
 }
 
 .principal {
-  width: calc(50 * var(--vps));
+  width: calc(45 * var(--vps));
 }
 
 .overflow-btn {
@@ -80,14 +85,14 @@ width: calc(12 * var(--vps));
   margin: calc(2 * var(--vps)) calc(2 * var(--vps)) 0 calc(2 * var(--vps));
   align-self: stretch;
   box-shadow: 
-    -2px 0 0 0 rgba(255,255,255,0.7),
-    2px 0 0 0 rgba(0,0,0,0.4);
+    calc(-1 * var(--vps)) 0 0 0 var(--highlight),
+    calc(1 * var(--vps)) 0 0 0 var(--shadow);
 }
 
 .minimized-window-container {
   display: flex;
   align-items: bottom;
-  gap: 8px;
+  gap: calc(2 * var(--vps));
   margin-right: auto;
 
 }
@@ -98,16 +103,15 @@ width: calc(12 * var(--vps));
 
 
 .minimized-window img {
-  width: 24px;
-  height: 24px;
-  margin-right: 5px;
+  width: calc(9 * var(--vps));
+  height: calc(9 * var(--vps));
+  margin-right: calc(1 * var(--vps));
+  image-rendering: optimizeSpeed;
+  image-rendering: pixelated;
+  -ms-interpolation-mode: nearest-neighbor;
 }
 
-.right-section {
-  display: flex;
-  align-items: stretch;
-  margin-right: 15px;
-}
+
 
 .clock-btn {
   background: none;
@@ -117,26 +121,25 @@ width: calc(12 * var(--vps));
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 120px;
+  width: calc(30 * var(--vps));
 }
 
 .clock {
   font-family: 'VT323', monospace;
   font-size: var(--font-size-large);
-  color: rgb(0, 0, 0);
-  border-radius: 3px;
+  color: var(--text-color);
+  border-radius: calc(1 * var(--vps));
 }
 
 .language-dropdown {
   position: relative;
   display: inline-flex;
   align-items: stretch;
-  margin-left: 8px;
 }
 
 .language-dropdown button {
   height: 100%;
-  width: 50px;
+  width: calc(13 * var(--vps));
   display: flex;
   align-items: center;
 }
@@ -144,10 +147,9 @@ width: calc(12 * var(--vps));
 .language-options {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
-  min-width: 30px;
-  font-size: 20px;
-  z-index: 1;
+  background-color: var(--bg-color);
+  font-size: var(--font-size-large);
+  z-index: 9999;
 }
 
 .language, .language-options a {
@@ -157,25 +159,25 @@ width: calc(12 * var(--vps));
 .navbar button, .navbar .dropbtn, .navbar .clock-btn, .navbar .language-dropdown button, .minimized-window {
   appearance: none;
   background: none;
-  color: #000;
+  color: var(--text-color);
+  background-color: var(--bg-color);
   border: none;
   cursor: pointer;
   font-family: 'VT323', monospace;
   font-size: var(--font-size-large);
-  padding: 2px 5px;
+  padding: calc(1 * var(--vps)) calc(2 * var(--vps));
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   box-sizing: border-box;
   box-shadow: 
-      -2px -2px 0px 2px rgba(255,255,255,0.7),
-      2px 2px 0 2px rgba(0,0,0,0.25);
-  margin: 4px;
+    calc(-0.5 * var(--vps)) calc(-0.5 * var(--vps)) 0 calc(0.5 * var(--vps)) var(--highlight),
+    calc(0.5 * var(--vps)) calc(0.5 * var(--vps)) 0 calc(0.5 * var(--vps)) var(--shadow);
+  margin: calc(1 * var(--vps));
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: 200px;
 }
 
 .minimized-window {
@@ -183,53 +185,51 @@ width: calc(12 * var(--vps));
   justify-content: flex-start;
   align-items: center;
   height: 100%;
-  width: 150px;
-  margin-top: 12px;
+  width: calc(60 * var(--vps));
 }
 
 /* Pour les boutons nécessitant un clic */
 button:hover:not(.dropbtn), .navbar .clock-btn:hover, .navbar .language-dropdown button:hover {
-  background-color: rgba(0, 0, 0, 0.1);
+  box-shadow: none;
+  background-color: var(--shadow);
 }
 
 button:active:not(.dropbtn), .navbar .clock-btn:active, .navbar .language-dropdown button:active {
   box-shadow: none;
-  opacity: 0.8;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: var(--shadow);
 }
 
 .dropdown-content a:hover {
-  background-color: rgba(0, 0, 0, 0.1);
+  box-shadow: none;
+  background-color: var(--shadow);
 }
 
 /* Pour les boutons des menus déroulants */
 .dropdown:hover .dropbtn {
   box-shadow: none;
-  opacity: 0.8;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: var(--shadow);
 }
 
 .language-dropdown:hover .language {
   box-shadow: none;
-  opacity: 0.8;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: var(--shadow);
 }
 
 .navbar button:hover:not(.dropbtn) {
-  padding: 16px 16px; /* Ajustez selon vos préférences */
+  padding: calc(2 * var(--vps)) calc(2 * var(--vps)); 
 }
 
 #minimized-windows-overflow {
-  display: none;  /* caché par défaut */
-  margin-left: 8px; /* Ajustez la valeur selon vos besoins */
-  margin-right: 8px;
+  display: none;  
+  margin-left: calc(2 * var(--vps)); 
+  margin-right: calc(2 * var(--vps));
 }
 
 .minimized-overflow-options a {
   display: block;
-  padding: 8px;
+  padding: calc(2 * var(--vps));
   text-decoration: none;
-  color: black;
+  color: var(--text-color);
 }
 
 
