--- a/selection-box.css
+++ b/selection-box.css
@@ -1,9 +1,9 @@
 
 
 .selection-rectangle {
-  border: var(--vps) dashed #d5d5d5;
+  border: var(--vps) dashed var(--gray2);
   position: absolute;
   z-index: 5; 
   pointer-events: none; 
-  background-color: rgba(255, 255, 255, 0.8); 
+  background-color: var(--semi-transparent); 
 }
