--- a/style.css
+++ b/style.css
@@ -12,11 +12,17 @@
   --vps: 0.45vh;
   --bg-color: #edeae3;
   --bg-color-hover: rgb(214, 214, 214);
+  --highlight:rgba(255,255,255,0.7);
+  --shadow: rgba(0,0,0,0.4);  
+  --semi-transparent: rgba(247, 244, 248, 0.5);
   --desktop-text-color: white;
   --text-color: black;
   --link-color: rgb(255, 255, 255);
   --border-color: #fff;
   --border-color-int: #c3c3c3;
+  --gray1: #4B4D4F;
+  --gray2: #85898D;
+
   --font-size-large: calc(6 * var(--vps));
   --font-size-medium: calc(4 * var(--vps));
   --font-size-small: calc(2 * var(--vps));
