--- a/clock-dashboard.css
+++ b/clock-dashboard.css
@@ -4,7 +4,7 @@
 
 
 
-.window-content.clock-dashboard {
+.clock-dashboard {
     /* display: grid;
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: repeat(10, 1fr);
